force-app/main/default/objects/PMDM_Request_log__c/PMDM_Request_log__c.object-meta.xml
<CustomObject>
    <label>PMDM Request log</label>
    <nameField>
        <label>PMDM Request log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PMDM Request logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>