force-app/main/default/objects/PMDM_Request_log__c/fields/Detailed_Request__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Request__c</fullName>
    <label>Detailed Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>