force-app/main/default/objects/PMDM_Request_log__c/fields/Offer_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Offer_Portfolio__c</fullName>
    <label>Offer Portfolio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>