force-app/main/default/objects/PMDM_Request_log__c/fields/PMDM_key__c.field-meta.xml
<CustomField>
    <fullName>PMDM_key__c</fullName>
    <label>PMDM Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>