force-app/main/default/objects/PMDM_Request_log__c/fields/Request_type__c.field-meta.xml
<CustomField>
    <fullName>Request_type__c</fullName>
    <label>Request type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Topline</fullName>
            </value>
            <value>
                <fullName>Hierarchy</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>